--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,6 +36,10 @@ android {
     lintOptions {
         disable 'InvalidPackage'
     }
+
+    packagingOptions {
+        doNotStrip '**/*.so'
+    }
 }
 
 dependencies {
