fix：X5WebViewActivity放在子进程

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:launchMode="singleTask"
             android:alwaysRetainTaskState="true"
             android:theme="@style/windowtitlebgstyle"
-            >
+            android:process=":remote">
         </activity>
     </application>
 </manifest>
