--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation files('libs/tbs_sdk_thirdapp_v3.5.0.1063_43500_staticwithdownload_withoutGame_obfs_20171011_195714.jar')
+    implementation 'androidx.appcompat:appcompat:1.3.1'
 }
